# stw

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: api.rst  conf.py  examples.rst  index.rst  readme.rst  requirements.txt
docs/_templates/: custom-module-template.rst
src/stw/: __init__.py  decorators.py  stopwatch.py  utils.py
src/stwatch/: __init__.py  stopwatch.py
tests/: stopwatch_test.py
