[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stw"
version = "0.1.2"
authors = [
  { name="Alex Gulko", email="alex@gulko.net" },
]
description = "Stopwatch for code execution"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/GulkoA/stw"
Issues = "https://github.com/GulkoA/stw/issues"